--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,12 @@ pefile==2019.4.18
 Pillow==7.0.0
 PyInstaller==3.4
 pylint==2.4.4
-PyQt5==5.9.2
-PyQt5-sip==12.7.1
+PyQt5   
+PyQt5-sip
 python-dateutil==2.8.1
 python-docx==0.8.10
 pytz==2019.3
-sip==4.19.8
+sip
 six==1.14.0
 typed-ast==1.4.1
 wrapt==1.11.2
